# spec-dev-tools

./: pyproject.toml  spec_drive-development_Readme.md
.spec-dev/: global-rules.yaml
docs/: architecture.md  coding-agent-design.md  security-agent-design.md
specs/modos-ai/: block.md
specs/payment-system/: block.md
specs/templates/: block_template.md
src/: __init__.py
src/agents/: __init__.py  base.py
src/builder/: __init__.py  dashboard.py  designer.py  discussion.py  executor.py  generator.py  persistence.py  research.py  session.py
src/cli/: __init__.py  main.py
src/coverage/: __init__.py
src/integrations/: github.py
src/llm/: __init__.py  client.py  mock_client.py
src/orchestration/: __init__.py  block_pipeline.py  flow_orchestrator.py  incremental.py  pipeline.py  pipelines.py  runner.py  section_router.py  state.py
src/rules/: __init__.py  context_manager.py  cross_block.py  engine.py  schemas.py  validators.py
src/spec/: __init__.py  block.py  diff.py  linting.py  parser.py  schemas.py  versioning.py
src/ui/: __init__.py  app.py
src/visualization/: __init__.py
tests/: __init__.py  conftest.py  test_block_parser.py  test_block_pipeline.py  test_coding_agent.py  test_pipeline_integration.py  test_review_agent.py  test_rules_engine.py  test_security_agent.py  test_testing_agent.py
tests/test_builder/: __init__.py  conftest.py  test_designer.py  test_discussion.py  test_executor.py  test_generator.py  test_integration.py  test_research.py  test_session.py
vscode-extension/: language-configuration.json  package.json
(+74 files in other folders)
